# rekognition_batch_detect

./: .gitignore  README.md  Untitled.ipynb  app.py  cdk.json  package.json  pyproject.toml  setup.py
demo/: FaceMatchingRekognition.ipynb  data_tree.txt  requirements.txt  utils.py
fns/: event.json  lambda.py
lambdas/fns/match_faces/: lambda.py  requirements.txt
lambdas/fns/notify_matches/: event.json  lambda.py
rekognition_batch_detect/: base_stack.py  monitoring_stack.py  rekognition_batch_detect_stack.py
